objects/Account.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>KSE_ID__c</fullName>
        <label>KSE ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Northeast (New England)​</fullName>
                </value>
                <value>
                    <fullName>Northeast (Mid-Atlantic)​</fullName>
                </value>
                <value>
                    <fullName>Midwest (East North Central)​</fullName>
                </value>
                <value>
                    <fullName>Midwest (West North Central)​</fullName>
                </value>
                <value>
                    <fullName>South (South Atlantic)​</fullName>
                </value>
                <value>
                    <fullName>South (East South Central)​</fullName>
                </value>
                <value>
                    <fullName>South (West South Central)​</fullName>
                </value>
                <value>
                    <fullName>West (Mountain)​</fullName>
                </value>
                <value>
                    <fullName>West (Pacific)​</fullName>
                </value>
                <value>
                    <fullName>International​</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Otis_ID__c</fullName>
        <label>Otis ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miller_ID__c</fullName>
        <label>Miller ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Tax_ID__c</fullName>
        <description>The business identification number used in the United State for business registration and tax collection, also known as Federal Employer Identification Number (FEIN).</description>
        <label>US Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Consultant</description>
        <label>Consultant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match_Code__c</fullName>
        <label>Match Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Union</fullName>
                </value>
                <value>
                    <fullName>Non-Union</fullName>
                </value>
                <value>
                    <fullName>Double-Breasted</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>Customer ID to match from MS Dynamics</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the Customer ID from MS Dynamics</inlineHelpText>
        <label>Customer ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Match_Grade__c</fullName>
        <label>Match Grade</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC4_Code_1__c</fullName>
        <description>The primary Standard Industrial Classification (SIC) four-digit code for the business.</description>
        <label>SIC4 Code 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC4_Code_2__c</fullName>
        <description>The secondary Standard Industrial Classification (SIC) four-digit code for the business.</description>
        <label>SIC4 Code 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC4_Code_3__c</fullName>
        <description>The tertiary Standard Industrial Classification (SIC) four-digit code for the business.</description>
        <label>SIC4 Code 3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <description>The Internet URL (Uniform Resource Locator) which uniquely identifies the proprietary website of the subject or the website preferred by the subject which gives more information on the subject.</description>
        <label>Web Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Minnesota_ID__c</fullName>
        <label>Minnesota ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_1__c</fullName>
        <description>The primary North American Industry Classification System (NAICS) code for the business.</description>
        <label>NAICS Code 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_2__c</fullName>
        <description>The secondary North American Industry Classification System (NAICS) code for the business.</description>
        <label>NAICS Code 2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_3__c</fullName>
        <description>The tertiary North American Industry Classification System (NAICS) code for the business.</description>
        <label>NAICS Code 3</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IOU</fullName>
                </value>
                <value>
                    <fullName>Midstream</fullName>
                </value>
                <value>
                    <fullName>Municipality</fullName>
                </value>
                <value>
                    <fullName>Cooperative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Still_Active__c</fullName>
        <label># Still Active</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, No Bid, Cancelled, Dead</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stock_Symbol__c</fullName>
        <description>Text that identifies the subject at the Stock Exchange for share trading purposes, e.g., DNB.</description>
        <label>Stock Symbol</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <description>The year in which the entity was established as a business.</description>
        <label>Year Started</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectricCount__c</fullName>
        <label>ElectricCount</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Electric</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Identifies the organizational status of a company. Available values are Single location, Headquarters/Parent, and Branch.</description>
        <label>Location Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <label># Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volt_Power_ID__c</fullName>
        <label>Volt Power ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S_Number__c</fullName>
        <description>The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D- U-N-S).</description>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameComparison__c</fullName>
        <formula>If(Name =  DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__BusinessName__c,1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameComparison</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Exchange__c</fullName>
        <description>The name of the Stock Exchange on which the subject&apos;s shares are traded.</description>
        <label>Stock Exchange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidence_Code__c</fullName>
        <label>Confidence Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <description>The date when the accounting period ended. If the Reliability Code denotes the figures are projected (future), then this is the date when the accounting period will end. Format: YYYY-MM-DD.</description>
        <label>Fiscal Year End</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Industry__c</fullName>
        <label>Service Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Gas Distribution</fullName>
                </value>
                <value>
                    <fullName>Gas Transmission</fullName>
                </value>
                <value>
                    <fullName>Hydro-X</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Service Line Extension</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Water/Sewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Annual_EBITDA__c</fullName>
        <label>Est. Annual EBITDA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fortune_1000_Rank__c</fullName>
        <description>Indicates if the company is in the Fortune 1000 by its rank.</description>
        <label>Fortune 1000 Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Status_Code__c</fullName>
        <description>A code value which describes the legal structure of the business.</description>
        <label>Legal Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Connections_ID__c</fullName>
        <label>SE Connections_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Annual_Revenue__c</fullName>
        <label>Est. Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incorporation_Date__c</fullName>
        <description>The date on which the registered business was incorporated, as stated in the business registration.</description>
        <label>Incorporation Date</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Customer_ID__c</fullName>
        <description>Master Customer ID to match from MS Dynamics</description>
        <label>Master Customer ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Volume__c</fullName>
        <label>Opportunity Volume</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SEC_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies target account for SEC</description>
        <label>SEC Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Competitor__c</fullName>
        <label># Winning Competitor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Count_Here__c</fullName>
        <description>The number of employees at this location.</description>
        <label>Employee Count Here</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hydro_Excavators_ID__c</fullName>
        <label>Hydro Excavators ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description_1__c</fullName>
        <description>The primary North American Industry Classification System (NAICS) description for the business.</description>
        <label>NAICS Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description_2__c</fullName>
        <description>The secondary North American Industry Classification System (NAICS) description for the business.</description>
        <label>NAICS Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description_3__c</fullName>
        <description>The tertiary North American Industry Classification System (NAICS) description for the business.</description>
        <label>NAICS Description 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <description>A description of the entity’s business operations, if available.</description>
        <label>Business Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Count_Total__c</fullName>
        <description>The total number of employees in the business organization; it should include subsidiary and branch locations.</description>
        <label>Employee Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_1_Segment_Name__c</fullName>
        <label>Group 1 Segment Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_2_Segment_Name__c</fullName>
        <label>Group 2 Segment Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IOU_LDC</fullName>
                    <label>Investor-Owned Utility (IOU) / Local Distribution Company (LDC)</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Municipality</fullName>
                </value>
                <value>
                    <fullName>Upstream (Exploration &amp; Production)</fullName>
                </value>
                <value>
                    <fullName>Midstream (Pipeline Transportation, Processing, Storage)</fullName>
                </value>
                <value>
                    <fullName>Downstream (Refining, Chemicals, etc)</fullName>
                </value>
                <value>
                    <fullName>EPC/General Contractor/Developer</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Business_Name__c</fullName>
        <description>The business name of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</description>
        <label>Parent Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Indicator__c</fullName>
        <description>Indicates whether the subject record is a Subsidiary within their corporate family tree.</description>
        <label>Subsidiary Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_EBITDA_calculated__c</fullName>
        <formula>Est_Annual_EBITDA__c  /  Est_Annual_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. EBITDA (%) – calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Miller_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies target account for Miller Pipeline</description>
        <label>Miller Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_D_U_N_S_Number__c</fullName>
        <description>The D-U-N-S number of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</description>
        <label>Parent D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Woman_Owned_Indicator__c</fullName>
        <description>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by and whose management and daily business operations are controlled by, one or more female persons.</description>
        <label>Woman Owned Indicator</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hydro_Excavators_II_ID__c</fullName>
        <label>Hydro Excavators II ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Classification__c</fullName>
        <label>Customer Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier1</fullName>
                </value>
                <value>
                    <fullName>Tier2</fullName>
                </value>
                <value>
                    <fullName>Tier3</fullName>
                </value>
                <value>
                    <fullName>Tier4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC4_Code_1_Description__c</fullName>
        <description>The primary Standard Industrial Classification (SIC) description for the business.</description>
        <label>SIC4 Code 1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC4_Code_2_Description__c</fullName>
        <description>The secondary Standard Industrial Classification (SIC) description for the business.</description>
        <label>SIC4 Code 2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC4_Code_3_Description__c</fullName>
        <description>The tertiary Standard Industrial Classification (SIC) description for the business.</description>
        <label>SIC4 Code 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minority_Owned_Indicator__c</fullName>
        <description>When &apos;true&apos; indicates that this organization is certified as a business that is greater than 50% owned by and whose management and daily business operations are controlled by one or more minority group members.</description>
        <label>Minority Owned Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Business_Indicator__c</fullName>
        <description>Indicates whether the business is designated a small business as defined by the Small Business Administration of the US government.</description>
        <label>Small Business Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Indicator__c</fullName>
        <description>Indicates whether the subject record is the Global Ultimate Parent within their corporate family tree.</description>
        <label>Global Ultimate Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_Indicator__c</fullName>
        <description>Indicates whether the subject record is the Domestic Ultimate Parent within their corporate family tree.</description>
        <label>Domestic Ultimate Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Structure_Description__c</fullName>
        <description>A description of the legal structure of the business.</description>
        <label>Legal Structure Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_Business_Name__c</fullName>
        <description>The primary name of the highest level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</description>
        <label>Global Ultimate Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_D_U_N_S_Number__c</fullName>
        <description>The D-U-N-S number of the highest-level parent within a corporate family tree. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock. A subject may be its own global ultimate.</description>
        <label>Global Ultimate D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Diversity_requirements__c</fullName>
        <label>Supplier Diversity requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_D_U_N_S_Number__c</fullName>
        <description>The D-U-N-S Number of the highest level parent within a corporate family tree that is domiciled in the same country as the requested company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock.</description>
        <label>Domestic Ultimate D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listed_As_Opportunity_Competitor__c</fullName>
        <label># Listed As Opportunity Competitor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Diversity_requirements_percent__c</fullName>
        <label>Supplier Diversity requirements percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acquisition_Target</fullName>
        <active>true</active>
        <label>Acquisition Target</label>
    </recordTypes>
    <validationRules>
        <fullName>Supplier_Diversity_requirements_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(

 ISPICKVAL( Supplier_Diversity_requirements__c , &quot;yes&quot;),
 ISNULL( Supplier_Diversity_requirements_percent__c ) 
)</errorConditionFormula>
        <errorDisplayField>Supplier_Diversity_requirements_percent__c</errorDisplayField>
        <errorMessage>Supplier Diversity requirements was checked yes, but there is not a value for Supplier Diversity requirements percent.</errorMessage>
    </validationRules>
</CustomObject>